--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bgj-06"]
 	path = bgj-06
 	url = git@github.com:ninjadev/bgj-06.git
+[submodule "kink-demo"]
+	path = kink-demo
+	url = git@github.com:aleksanb/kink-demo.git
