Fix link to fashion image

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -12,7 +12,7 @@
 - type: "Demos"
   items:
     - title: "Everything is Fashion"
-      image: "images/fashion@250px.png"
+      image: "images/fashion_preview@250px.png"
       description: "Ninjadev's submission for solskogen 2015. Came in at 2nd place."
       link: "http://stianj.com/fashion/"
 
