Correct name of Flat Shade Society demo

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -16,7 +16,7 @@
 
 - type: "Demos"
   items:
-    - title: "Pinky Frinky"
+    - title: "Flat Shade Society"
       image: "images/flatshadesociety@250px.png"
       description: "Invite to Solskogen 2019 made with Ninjadev. Released at Revision 2019."
       link: "https://stianj.com/flat-shade-society/"
