Iterate on frontpage

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,26 +1,27 @@
 - items:
     - title: "Hyre"
       image: "images/hyre_preview@200px.png"
-      description: "Download the app to book and unlock cars in Norway."
+      description: "Download the app to book and unlock cars in [Norway](https://www.hyre.no/) & [Sweden](https://www.hyre.se/)."
       link: "https://www.hyre.no/"
-
-    - title: "Composite"
-      image: "images/composite_preview@200px.jpg"
-      description: "Interactive prototypes straight from Photoshop to your iPhone."
-      link: "http://www.getcomposite.com/"
-
-    - title: "nin"
-      image: "images/nin_preview@200px.png"
-      description: "Ninjadev's internal demotool. Used to create WebGL demos like Everything is Fashion and Inakuwa Oasis. And nin itself runs directly in the browser!"
-      link: "https://www.github.com/ninjadev/nin/"
 
     - title: "Wikipendium"
       image: "images/wikipendium_preview@200px.png"
       description: "Compendiums edited as a wiki. Available for free and used by lots of NTNU students."
       link: "https://www.wikipendium.no"
 
+    - title: "Composite"
+      image: "images/composite_preview@200px.jpg"
+      description: "Interactive prototypes straight from Photoshop to your iPhone."
+      link: "http://www.getcomposite.com/"
+
 - type: "Demos"
+  description: I'm part of the [Demo scene](https://en.wikipedia.org/wiki/Demoscene) group [Ninjadev](https://www.ninjadev.org/). Here are some of the productions we've made, for different demo scene parties.
   items:
+    - title: "nin"
+      image: "images/nin_preview@200px.png"
+      description: "Ninjadev's internal demotool. Used to create WebGL demos like Everything is Fashion and Inakuwa Oasis. And nin itself runs directly in the browser!"
+      link: "https://www.github.com/ninjadev/nin/"
+
     - title: "Flat Shade Society"
       image: "images/flatshadesociety@250px.png"
       description: "Invite to Solskogen 2019 made with Ninjadev. Released at Revision 2019."
